RESOLVED FIXED48490
Find indicators do not bounce
https://bugs.webkit.org/show_bug.cgi?id=48490
Summary Find indicators do not bounce
Anders Carlsson
Reported 2010-10-27 18:28:55 PDT
Find indicators do not bounce
Attachments
Patch (382.11 KB, patch)
2010-10-27 18:32 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-10-27 18:31:51 PDT
Anders Carlsson
Comment 2 2010-10-27 18:32:38 PDT
Anders Carlsson
Comment 3 2010-10-27 18:45:24 PDT
Note You need to log in before you can comment on or make changes to this bug.