Find indicators do not bounce https://bugs.webkit.org/show_bug.cgi?id=48490 <rdar://problem/8564276>

Reviewed by Sam Weinig.

WebKit2:

* UIProcess/API/mac/FindIndicatorWindow.h:
* UIProcess/API/mac/FindIndicatorWindow.mm:
(-[WebFindIndicatorWindowAnimation _initWithFindIndicatorWindow:WebKit::animationDuration:animationProgressCallback:WebKit::FindIndicatorWindow::animationDidEndCallback:WebKit::FindIndicatorWindow::]):
Add an animationDuration parameter.

(WebKit::FindIndicatorWindow::FindIndicatorWindow):
Initialize m_bounceAnimationContext.

(WebKit::FindIndicatorWindow::setFindIndicator):
Create a bounce animation and start it.

(WebKit::FindIndicatorWindow::closeWindow):
Stop the bounce animation and destroy the bounce animation context.

(WebKit::FindIndicatorWindow::startFadeOutTimerFired):
pass the fade out duration.

(WebKit::FindIndicatorWindow::bounceAnimationCallback):
Set the bounce animation progress.

(WebKit::FindIndicatorWindow::bounceAnimationDidEnd):
Destroy the bounce animation context.

WebKitLibraries:

Add bounce animation context functions.

* WebKitSystemInterface.h:
* libWebKitSystemInterfaceLeopard.a:
* libWebKitSystemInterfaceSnowLeopard.a:

Canonical link: https://commits.webkit.org/61253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70737 268f45cc-cd09-0410-ab3c-d52691b4dbfc